fix: update MCP configuration for npm package distribution
- Fix claude_desktop_config.json to use npx aetheros instead of local path
- Update installation instructions for npm package usage
- Add .env.example to npm distribution files
- Update SUBMISSION.md to reflect 36 tools and npm config
- Improve troubleshooting with npm-specific commands
- Version bump to 1.0.5 for npm compatibility fixes

--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "kawa-fi-mcp",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "MCP server for comprehensive Hedera DeFi operations",
   "main": "dist/index.js",
   "type": "module",
   "files": [
     "dist/**/*",
     "README.md",
-    "LICENSE"
+    "LICENSE",
+    ".env.example"
   ],
   "scripts": {
     "build": "tsc",
