fix: add bin field and shebang to make package executable
- Add bin field in package.json pointing to dist/index.js
- Add shebang #\!/usr/bin/env node to src/index.ts
- Version bump to 1.0.6 for executable support
- Now works with npx aetheros and global installation

--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
   "name": "kawa-fi-mcp",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "MCP server for comprehensive Hedera DeFi operations",
   "main": "dist/index.js",
+  "bin": {
+    "kawa-fi-mcp": "dist/index.js"
+  },
   "type": "module",
   "files": [
     "dist/**/*",
